	Fixed: PHP5-FPM (5.6.0~rc2+dfsg-1) doesn't work with Apache fastcgi module (Debian Jessie)
	Fixed: The backend must not try to start services which are not used (MySQL, Bind9)
	Fixed: Usage of the fastcgi Apache extension module is no longer recommended with Apache 2.4.x (Debian Jessie)
	Fixed: Quota script must ignore maildir which doesn't exist
	Replaced: Dovecot SASL by Cyrus SASL (Postfix)

GUI
	Fixed: AjaXplorer (Pydio) Autologon feature is broken
	Fixed: Disk usage (percent value) is wrong (admin level / Customer statistics)
	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function
	Fixed: Unable to list domain aliases by name (search feature / reseller level)

INSTALLER
	Added: Dialog box allowing to setup the public IP for servers which are inside a private LAN
	Added: Option allowing to force reinstallation/reconfiguration of distro packages
	Fixed: Bind9 cannot start if the resolvconf package is not configured yet (Debian Squeeze)
	Fixed: Installer hangs while packages installation (Debian Jessie)
	Fixed: Unable to migrate from ispCP (linked to the infinite loop in iMSCP_Update_Database::dropIndexByColumn())
	Updated: Preseed template file according new parameters

PLUGINS
	Fixed: Loading of plugins must not fail silently

VENDOR:
	Added: Net::Domain::TLD version 1.72 from CPAN (This allow to have last available TLDs list for this module)

TICKETS
	Fixed #1072: Bug - Uninstaller error - iMSCP::File::delFile: Unable to delete file imscp_network...
	Fixed #1095: Bug - IP usage interface is broken
	Fixed #1097: Enhancement - Allow to set public IP for server which are inside a private LAN
	Fixed #1099: Bug - SQL users which belong to an account which is being deleted are not removed from mysql table
	Fixed #1106: Defect - PHP5-FPM server implementation - Reload failure under Ubuntu Trusty Thar
	Fixed #1109: Defect - .technology is not recognized as a valid top level domain