@@ -1,0 +1,2 @@
+[mysqld]
+innodb_use_native_aio = {INNODB_USE_NATIVE_AIO}
