@@ -3,4 +3,5 @@
 <install>
     <folders>${SYSTEM_CONF}/mysql</folders>
     <copy_config>${SYSTEM_CONF}/mysql/.my.cnf</copy_config>
+    <copy_config>${SYSTEM_CONF}/mysql/imscp.cnf</copy_config>
 </install>
